Some header adjustments, including adding placeholder alerts for incomplete links and fixing the issue where validation errors would overflow the login form when the header is closed.

--- a/css/header.less
+++ b/css/header.less
@@ -251,6 +251,10 @@ div.header-content > div.header-name {
             font-size: 2.5em;
             padding: 7px 14px;
             font-weight: 600;
+
+            a {
+                font-size: 0.4em;
+            }
         }
 
         a {
